`Fixed Title `adjusted margin for products `adjusted alignments for contacts

--- a/src/Styles/Contact.css
+++ b/src/Styles/Contact.css
@@ -41,6 +41,8 @@
 @media only screen and (max-width: 375px) and (min-width: 0.32px) {
   .InformationContainer {
     align-items: start;
+    justify-content: space-between;
+    justify-items: start;
   }
   .ContactContainer {
     width: 90%;
